# supernova

./: README.md
supernova-api/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  build.bash  build.dev.bash  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
supernova-api/app/: definition.py  main.py
supernova-api/app/core/: authorization.py  cancellation.py  config.py  database.py  logger.py  parallel.py  query_parser.py  router_setup.py
supernova-api/app/models/: dog.py  handler.py  league.py  user.py
supernova-api/app/repositories/: dog.py  handler.py  league.py  user.py
supernova-api/app/routers/: dog.py  email.py  handler.py  jwt.py  league.py  utility.py
supernova-api/app/services/: dog.py  handler.py  league.py  user.py
supernova-api/backend/: pyproject.toml
supernova-api/notebooks/: test_dog_service.ipynb
supernova-ui/: README.md  package.json  quasar.config.js
supernova-ui/src/components/Util/: UtilCustomDisplayCard.vue
supernova-ui/src/composables/: useTableColumns.js
supernova-ui/src/pages/admin/: dog.vue
supernova-ui/src/router/: routes.js
