[tool.poetry]
package-mode = false
name = "supernova-api"
version = "0.1.0"
description = "SUPERNOVA DOGS League Tracker API"
authors = ["Dima <dmitirijsnaudzuns@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
flake8 = "^7.0.0"
httpx = "^0.26.0"  # For testing FastAPI applications

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'